# Project_PV

./: .gitignore  README.md  pyproject.toml
asset/: DoorKeeper.xcf  default_skeleton.json  waving_hand_skeleton.json
release/: skeleton.json  waving_hand_skeleton.json
src/project_pv/: __init__.py  animation.py  main.py  skeleton_model.py  ui.py
tests/: test_main.py
