[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-pv"
version = "0.1.0"
description = "Vector motion designer with GIF export for Project PV."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10",
]

[project.scripts]
project-pv = "project_pv.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
